Internal: Include ckeditor5 in the workspace as well because ckeditor5-utils reads from it. [skip ci]

--- a/package.json
+++ b/package.json
@@ -134,7 +134,8 @@
   ],
   "workspaces": {
     "packages": [
-      "packages/*"
+      "packages/*",
+      "."
     ],
     "nohoist": [
       "**/husky"
