--- a/packages/ckeditor5-ckfinder/package.json
+++ b/packages/ckeditor5-ckfinder/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-adapter-ckfinder": "^11.0.0",
     "@ckeditor/ckeditor5-core": "^12.0.0",
-    "@ckeditor/ckeditor5-ui": "^12.0.0",
-    "@ckeditor/ckeditor5-widget": "^11.0.0"
+    "@ckeditor/ckeditor5-ui": "^12.0.0"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-editor-classic": "^12.0.0",
