--- a/packages/ckeditor5-ui/package.json
+++ b/packages/ckeditor5-ui/package.json
@@ -10,16 +10,12 @@
   ],
   "dependencies": {
     "@ckeditor/ckeditor5-core": "^12.0.0",
-    "@ckeditor/ckeditor5-theme-lark": "^13.0.0",
     "@ckeditor/ckeditor5-utils": "^12.0.0",
     "lodash-es": "^4.17.10"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-basic-styles": "^11.0.0",
     "@ckeditor/ckeditor5-block-quote": "^11.0.0",
-    "@ckeditor/ckeditor5-build-balloon": "^12.0.0",
-    "@ckeditor/ckeditor5-cloud-services": "^11.0.0",
-    "@ckeditor/ckeditor5-easy-image": "^11.0.0",
     "@ckeditor/ckeditor5-editor-balloon": "^12.0.0",
     "@ckeditor/ckeditor5-editor-classic": "^12.0.0",
     "@ckeditor/ckeditor5-engine": "^13.0.0",
@@ -31,13 +27,10 @@
     "@ckeditor/ckeditor5-list": "^12.0.0",
     "@ckeditor/ckeditor5-paragraph": "^11.0.0",
     "@ckeditor/ckeditor5-typing": "^12.0.0",
-    "@ckeditor/ckeditor5-undo": "^11.0.0",
-    "del": "^2.2.0",
     "eslint": "^5.5.0",
     "eslint-config-ckeditor5": "^1.0.11",
     "husky": "^1.3.1",
-    "lint-staged": "^7.0.0",
-    "lodash-cli": "^4"
+    "lint-staged": "^7.0.0"
   },
   "engines": {
     "node": ">=8.0.0",
