Internal: Ignored incorrectly detected dependencies (require() calls come from webpack).

--- a/packages/ckeditor5-markdown-gfm/package.json
+++ b/packages/ckeditor5-markdown-gfm/package.json
@@ -51,5 +51,11 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
-  }
+  },
+  "depcheckIgnore": [
+    "collapse-whitespace",
+    "jsdom",
+    "void-elements",
+    "block-elements"
+  ]
 }
