--- a/packages/ckeditor5-adapter-ckfinder/.travis.yml
+++ b/packages/ckeditor5-adapter-ckfinder/.travis.yml
@@ -28,6 +28,9 @@ install:
 - ckeditor5-dev-tests-install-dependencies
 script:
 - ckeditor5-dev-tests-travis
+after_script:
+- export END_TIME=$( date +%s )
+- ckeditor5-dev-tests-notify-travis-status
 after_success:
 - ckeditor5-dev-tests-save-revision
 env:
