--- a/packages/ckeditor5-adapter-ckfinder/.travis.yml
+++ b/packages/ckeditor5-adapter-ckfinder/.travis.yml
@@ -16,15 +16,12 @@ branches:
   except:
   - stable
 before_install:
-- export DEBUG=true
 - export START_TIME=$( date +%s )
-- export CWD=$( pwd )
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
 - npm i -g yarn
 install:
-- cd /tmp && git clone https://github.com/ckeditor/ckeditor5-dev.git && cd ./ckeditor5-dev && git checkout t/ckeditor5/1655 && cd $CWD
-- yarn add file:/tmp/ckeditor5-dev/packages/ckeditor5-dev-tests
+- yarn add @ckeditor/ckeditor5-dev-tests
 - ckeditor5-dev-tests-install-dependencies
 script:
 - ckeditor5-dev-tests-travis
