--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@ckeditor/ckeditor5-mention": "*",
     "@ckeditor/ckeditor5-paragraph": "^11.0.0",
     "@ckeditor/ckeditor5-paste-from-office": "^11.0.0",
+    "@ckeditor/ckeditor5-remove-format": "*",
     "@ckeditor/ckeditor5-table": "^12.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^13.0.0",
     "@ckeditor/ckeditor5-typing": "^12.0.0",
