Added "eslint-plugin-ckeditor5-rules" as a "depcheckIgnore".

--- a/packages/ckeditor5-autoformat/package.json
+++ b/packages/ckeditor5-autoformat/package.json
@@ -57,6 +57,9 @@
     "src/lib/**",
     "packages/**"
   ],
+  "depcheckIgnore": [
+    "eslint-plugin-ckeditor5-rules"
+  ],
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
