--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,7 @@
 sudo: required
 dist: trusty
 addons:
-  apt:
-    sources:
-    - google-chrome
-    packages:
-    - google-chrome-stable
+  chrome: stable
 language: node_js
 cache:
   yarn: true
