--- a/package.json
+++ b/package.json
@@ -73,8 +73,10 @@
     "@ckeditor/ckeditor5-dev-utils": "^12.0.1",
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^8.0.1",
     "@ckeditor/ckeditor5-inspector": "^1.2.0",
+    "@ckeditor/ckeditor5-react": "^1.1.3",
     "@ckeditor/ckeditor5-real-time-collaboration": "^12.2.0",
     "@ckeditor/ckeditor5-track-changes": "^0.2.0",
+    "babel-standalone": "^6.26.0",
     "css-loader": "^1.0.0",
     "eslint": "^5.5.0",
     "eslint-config-ckeditor5": "^1.0.11",
@@ -86,6 +88,8 @@
     "minimatch": "^3.0.4",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^1.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "style-loader": "^0.23.0",
     "svgo": "^1.1.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
