--- a/packages/ckeditor5-remove-format/package.json
+++ b/packages/ckeditor5-remove-format/package.json
@@ -22,7 +22,9 @@
     "@ckeditor/ckeditor5-engine": "^13.1.0",
     "@ckeditor/ckeditor5-enter": "^11.0.1",
     "@ckeditor/ckeditor5-heading": "^11.0.1",
+    "@ckeditor/ckeditor5-image": "^13.0.1",
     "@ckeditor/ckeditor5-link": "^11.0.1",
+    "@ckeditor/ckeditor5-paragraph": "^11.0.1",
     "@ckeditor/ckeditor5-typing": "^12.0.1",
     "@ckeditor/ckeditor5-undo": "^11.0.1",
     "eslint": "^5.15.3",
