--- a/packages/ckeditor5-link/package.json
+++ b/packages/ckeditor5-link/package.json
@@ -15,9 +15,11 @@
     "@ckeditor/ckeditor5-ui": "^13.0.0"
   },
   "devDependencies": {
+    "@ckeditor/ckeditor5-clipboard": "^11.0.2",
     "@ckeditor/ckeditor5-editor-classic": "^12.1.1",
     "@ckeditor/ckeditor5-enter": "^11.0.2",
     "@ckeditor/ckeditor5-paragraph": "^11.0.2",
+    "@ckeditor/ckeditor5-theme-lark": "^14.0.0",
     "@ckeditor/ckeditor5-typing": "^12.0.2",
     "@ckeditor/ckeditor5-undo": "^11.0.2",
     "@ckeditor/ckeditor5-utils": "^12.1.1",
