--- a/packages/ckeditor5-indent/package.json
+++ b/packages/ckeditor5-indent/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ckeditor/ckeditor5-indent-block",
+  "name": "@ckeditor/ckeditor5-indent",
   "version": "0.0.1",
-  "description": "Block indent feature for CKEditor 5.",
+  "description": "Indentation feature for CKEditor 5.",
   "keywords": [
     "ckeditor",
     "ckeditor5",
@@ -28,10 +28,10 @@
   "author": "CKSource (http://cksource.com/)",
   "license": "GPL-2.0-or-later",
   "homepage": "https://ckeditor.com/ckeditor-5",
-  "bugs": "https://github.com/ckeditor/ckeditor5-indent-block/issues",
+  "bugs": "https://github.com/ckeditor/ckeditor5-indent/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ckeditor/ckeditor5-indent-block.git"
+    "url": "https://github.com/ckeditor/ckeditor5-indent.git"
   },
   "files": [
     "lang",
