--- a/packages/ckeditor5-indent/package.json
+++ b/packages/ckeditor5-indent/package.json
@@ -14,8 +14,11 @@
     "@ckeditor/ckeditor5-utils": "^12.1.1"
   },
   "devDependencies": {
-    "@ckeditor/ckeditor5-ui": "^13.0.0",
     "@ckeditor/ckeditor5-editor-classic": "^12.1.1",
+	"@ckeditor/ckeditor5-engine": "^13.1.1",
+	"@ckeditor/ckeditor5-heading": "^11.0.2",
+	"@ckeditor/ckeditor5-paragraph": "^11.0.2",
+    "@ckeditor/ckeditor5-ui": "^13.0.0",
     "eslint": "^5.15.3",
     "eslint-config-ckeditor5": "^1.0.11",
     "husky": "^1.3.1",
