--- a/packages/ckeditor5-utils/package.json
+++ b/packages/ckeditor5-utils/package.json
@@ -19,6 +19,7 @@
     "@ckeditor/ckeditor5-editor-classic": "43.1.0",
     "@ckeditor/ckeditor5-core": "43.1.0",
     "@ckeditor/ckeditor5-engine": "43.1.0",
+    "@ckeditor/ckeditor5-ui": "43.1.0",
     "@types/lodash-es": "^4.17.12",
     "typescript": "5.0.4"
   },
