--- a/package.json
+++ b/package.json
@@ -90,18 +90,18 @@
     "@ckeditor/ckeditor5-build-multi-root": "43.2.0",
     "@ckeditor/ckeditor5-case-change": "43.2.0",
     "@ckeditor/ckeditor5-comments": "43.2.0",
-    "@ckeditor/ckeditor5-dev-build-tools": "^44.0.0-alpha.0",
-    "@ckeditor/ckeditor5-dev-bump-year": "^44.0.0-alpha.0",
-    "@ckeditor/ckeditor5-dev-ci": "^44.0.0-alpha.0",
-    "@ckeditor/ckeditor5-dev-dependency-checker": "^44.0.0-alpha.0",
-    "@ckeditor/ckeditor5-dev-docs": "^44.0.0-alpha.0",
-    "@ckeditor/ckeditor5-dev-release-tools": "^44.0.0-alpha.0",
-    "@ckeditor/ckeditor5-dev-stale-bot": "^44.0.0-alpha.0",
-    "@ckeditor/ckeditor5-dev-tests": "^44.0.0-alpha.0",
-    "@ckeditor/ckeditor5-dev-transifex": "^44.0.0-alpha.0",
-    "@ckeditor/ckeditor5-dev-translations": "^44.0.0-alpha.0",
-    "@ckeditor/ckeditor5-dev-utils": "^44.0.0-alpha.0",
-    "@ckeditor/ckeditor5-dev-web-crawler": "^44.0.0-alpha.0",
+    "@ckeditor/ckeditor5-dev-build-tools": "^44.0.0",
+    "@ckeditor/ckeditor5-dev-bump-year": "^44.0.0",
+    "@ckeditor/ckeditor5-dev-ci": "^44.0.0",
+    "@ckeditor/ckeditor5-dev-dependency-checker": "^44.0.0",
+    "@ckeditor/ckeditor5-dev-docs": "^44.0.0",
+    "@ckeditor/ckeditor5-dev-release-tools": "^44.0.0",
+    "@ckeditor/ckeditor5-dev-stale-bot": "^44.0.0",
+    "@ckeditor/ckeditor5-dev-tests": "^44.0.0",
+    "@ckeditor/ckeditor5-dev-transifex": "^44.0.0",
+    "@ckeditor/ckeditor5-dev-translations": "^44.0.0",
+    "@ckeditor/ckeditor5-dev-utils": "^44.0.0",
+    "@ckeditor/ckeditor5-dev-web-crawler": "^44.0.0",
     "@ckeditor/ckeditor5-document-outline": "43.2.0",
     "@ckeditor/ckeditor5-export-pdf": "43.2.0",
     "@ckeditor/ckeditor5-export-word": "43.2.0",
