--- a/packages/ckeditor5-build-inline/package.json
+++ b/packages/ckeditor5-build-inline/package.json
@@ -51,8 +51,8 @@
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-core": "43.2.0",
-    "@ckeditor/ckeditor5-dev-translations": "^44.0.0-alpha.0",
-    "@ckeditor/ckeditor5-dev-utils": "^44.0.0-alpha.0",
+    "@ckeditor/ckeditor5-dev-translations": "^44.0.0",
+    "@ckeditor/ckeditor5-dev-utils": "^44.0.0",
     "@ckeditor/ckeditor5-theme-lark": "43.2.0",
     "terser-webpack-plugin": "^5.0.0",
     "typescript": "5.0.4",
