--- a/packages/ckeditor5-editor-multi-root/package.json
+++ b/packages/ckeditor5-editor-multi-root/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-basic-styles": "43.2.0",
-    "@ckeditor/ckeditor5-dev-utils": "^44.0.0-alpha.0",
+    "@ckeditor/ckeditor5-dev-utils": "^44.0.0",
     "@ckeditor/ckeditor5-enter": "43.2.0",
     "@ckeditor/ckeditor5-heading": "43.2.0",
     "@ckeditor/ckeditor5-paragraph": "43.2.0",
