--- a/packages/ckeditor5-html-support/package.json
+++ b/packages/ckeditor5-html-support/package.json
@@ -32,7 +32,7 @@
     "@ckeditor/ckeditor5-clipboard": "43.2.0",
     "@ckeditor/ckeditor5-cloud-services": "43.2.0",
     "@ckeditor/ckeditor5-code-block": "43.2.0",
-    "@ckeditor/ckeditor5-dev-utils": "^44.0.0-alpha.0",
+    "@ckeditor/ckeditor5-dev-utils": "^44.0.0",
     "@ckeditor/ckeditor5-easy-image": "43.2.0",
     "@ckeditor/ckeditor5-editor-classic": "43.2.0",
     "@ckeditor/ckeditor5-editor-multi-root": "43.2.0",
