--- a/packages/ckeditor5-language/package.json
+++ b/packages/ckeditor5-language/package.json
@@ -19,7 +19,7 @@
     "ckeditor5": "43.2.0"
   },
   "devDependencies": {
-    "@ckeditor/ckeditor5-dev-utils": "^44.0.0-alpha.0",
+    "@ckeditor/ckeditor5-dev-utils": "^44.0.0",
     "@ckeditor/ckeditor5-editor-classic": "43.2.0",
     "@ckeditor/ckeditor5-engine": "43.2.0",
     "@ckeditor/ckeditor5-paragraph": "43.2.0",
