--- a/packages/ckeditor5-show-blocks/package.json
+++ b/packages/ckeditor5-show-blocks/package.json
@@ -18,7 +18,7 @@
     "ckeditor5": "43.2.0"
   },
   "devDependencies": {
-    "@ckeditor/ckeditor5-dev-utils": "^44.0.0-alpha.0",
+    "@ckeditor/ckeditor5-dev-utils": "^44.0.0",
     "@ckeditor/ckeditor5-editor-classic": "43.2.0",
     "@ckeditor/ckeditor5-editor-balloon": "43.2.0",
     "@ckeditor/ckeditor5-editor-decoupled": "43.2.0",
