--- a/packages/ckeditor5-bookmark/package.json
+++ b/packages/ckeditor5-bookmark/package.json
@@ -24,6 +24,7 @@
     "@ckeditor/ckeditor5-basic-styles": "43.1.1",
     "@ckeditor/ckeditor5-block-quote": "43.1.1",
     "@ckeditor/ckeditor5-cloud-services": "43.1.1",
+    "@ckeditor/ckeditor5-code-block": "43.1.1",
     "@ckeditor/ckeditor5-dev-utils": "^42.0.0",
     "@ckeditor/ckeditor5-easy-image": "43.1.1",
     "@ckeditor/ckeditor5-editor-classic": "43.1.1",
