--- a/package.json
+++ b/package.json
@@ -208,7 +208,7 @@
     "release:publish-packages": "node ./scripts/release/publishpackages.mjs",
     "release:deploy-cdn": "node ./scripts/release/deploycdn.mjs",
     "release:lint-packages": "node ./scripts/release/validatepackages.mjs",
-    "release:switch-latest": "node ./scripts/release/switchlatest.mjs",
+    "release:switch-latest-npm": "node ./scripts/release/switchlatestnpm.mjs",
     "release:clean": "node ./scripts/release/clean.mjs",
     "clean-up-svg-icons": "node ./scripts/clean-up-svg-icons.mjs",
     "collect-svg-icons": "node scripts/collect-svg-icons.mjs",
