--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -34,8 +34,9 @@ jobs:
           config: |
             paths-ignore:
               - tests
-              - 'packages/*/tests'
               - scripts
+              - 'packages/*/tests'
+              - 'packages/ckeditor5-build-*/build/**'
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
         with:
