Adjusted resource classes depending on the complexity of a job.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ version: 2.1
 
 setup: true
 
+# List of parameters must be synchronized between configuration files.
 parameters:
   isNightly:
     type: boolean
@@ -38,7 +39,7 @@ commands:
 jobs:
   generate_configuration:
     machine: true
-    resource_class: xlarge
+    resource_class: large
     parameters:
       isNightly:
         type: boolean
