--- a/package.json
+++ b/package.json
@@ -200,6 +200,7 @@
     "translations:download": "node ./scripts/translations/download.mjs",
     "translations:upload": "node ./scripts/translations/upload.mjs",
     "translations:synchronize": "node ./scripts/translations/synchronize.mjs",
+    "translations:validate": "node ./scripts/translations/synchronize.mjs --validate-only",
     "build": "tsc -p ./tsconfig.release-ckeditor5.json",
     "build:dist": "node scripts/nim/build-ckeditor5.mjs",
     "predll:build": "npm run build",
