--- a/package.json
+++ b/package.json
@@ -197,6 +197,7 @@
     "docs:vale": "vale",
     "translations:synchronize": "node ./scripts/translations/synchronize.mjs",
     "translations:validate": "node ./scripts/translations/synchronize.mjs --validate-only",
+    "translations:move": "node ./scripts/translations/move.mjs",
     "build": "tsc -p ./tsconfig.release-ckeditor5.json",
     "build:dist": "node scripts/nim/build-ckeditor5.mjs",
     "predll:build": "npm run build",
