--- a/packages/ckeditor5-bookmark/package.json
+++ b/packages/ckeditor5-bookmark/package.json
@@ -36,6 +36,7 @@
     "@ckeditor/ckeditor5-list": "43.2.0",
     "@ckeditor/ckeditor5-editor-multi-root": "43.2.0",
     "@ckeditor/ckeditor5-paragraph": "43.2.0",
+    "@ckeditor/ckeditor5-paste-from-office": "43.2.0",
     "@ckeditor/ckeditor5-table": "43.2.0",
     "@ckeditor/ckeditor5-theme-lark": "43.2.0",
     "typescript": "5.0.4",
