--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ckeditor/ckeditor5-autosave": "43.2.0",
     "@ckeditor/ckeditor5-basic-styles": "43.2.0",
     "@ckeditor/ckeditor5-block-quote": "43.2.0",
+    "@ckeditor/ckeditor5-bookmark": "0.0.1",
     "@ckeditor/ckeditor5-ckbox": "43.2.0",
     "@ckeditor/ckeditor5-ckfinder": "43.2.0",
     "@ckeditor/ckeditor5-clipboard": "43.2.0",
