--- a/tsconfig.typedoc.json
+++ b/tsconfig.typedoc.json
@@ -21,6 +21,9 @@
       ],
       "@ckeditor/ckeditor-cloud-services-collaboration/*": [
         "external/ckeditor-cloud-services-collaboration/*"
+      ],
+      "date-fns/*": [
+        "node_modules/@ckeditor/ckeditor5-collaboration-core/node_modules/date-fns"
       ]
     }
   },
