--- a/packages/ckeditor5-utils/package.json
+++ b/packages/ckeditor5-utils/package.json
@@ -21,7 +21,12 @@
     "@ckeditor/ckeditor5-core": "43.3.0",
     "@ckeditor/ckeditor5-engine": "43.3.0",
     "@types/lodash-es": "^4.17.12",
-    "typescript": "5.0.4"
+    "@vitest/browser": "^2.1.4",
+    "@vitest/coverage-istanbul": "^2.1.4",
+    "@vitest/runner": "^2.1.4",
+    "typescript": "5.0.4",
+    "vitest": "^2.1.4",
+    "webdriverio": "^9.2.6"
   },
   "depcheckIgnore": [
     "typescript"
@@ -46,6 +51,8 @@
   ],
   "scripts": {
     "build": "tsc -p ./tsconfig.json",
-    "build:dist": "node ../../scripts/nim/build-package.mjs"
+    "build:dist": "node ../../scripts/nim/build-package.mjs",
+    "test": "vitest run --config vitest.config.js",
+    "coverage": "vitest run --config vitest.config.js --coverage"
   }
 }
