--- a/packages/ckeditor5-emoji/package.json
+++ b/packages/ckeditor5-emoji/package.json
@@ -15,14 +15,15 @@
   "dependencies": {
     "ckeditor5": "43.3.0",
     "@ckeditor/ckeditor5-core": "43.3.0",
-    "@ckeditor/ckeditor5-typing": "43.3.0",
-    "@ckeditor/ckeditor5-ui": "43.3.0",
-    "@ckeditor/ckeditor5-utils": "43.3.0"
+    "@ckeditor/ckeditor5-typing": "43.3.0"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-dev-utils": "^45.0.0",
     "@ckeditor/ckeditor5-editor-classic": "43.3.0",
+    "@ckeditor/ckeditor5-enter": "43.3.0",
+    "@ckeditor/ckeditor5-paragraph": "43.3.0",
     "@ckeditor/ckeditor5-theme-lark": "43.3.0",
+    "@ckeditor/ckeditor5-undo": "43.3.0",
     "typescript": "5.0.4",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
