--- a/packages/ckeditor5-utils/package.json
+++ b/packages/ckeditor5-utils/package.json
@@ -12,15 +12,17 @@
   "type": "module",
   "main": "src/index.ts",
   "dependencies": {
-    "lodash-es": "4.17.21",
-    "@ckeditor/ckeditor5-ui": "43.3.1"
+    "@ckeditor/ckeditor5-ui": "43.3.1",
+    "lodash-es": "4.17.21"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-build-classic": "43.3.1",
-    "@ckeditor/ckeditor5-editor-classic": "43.3.1",
     "@ckeditor/ckeditor5-core": "43.3.1",
+    "@ckeditor/ckeditor5-editor-classic": "43.3.1",
     "@ckeditor/ckeditor5-engine": "43.3.1",
     "@types/lodash-es": "^4.17.12",
+    "@vitest/browser": "^2.1.4",
+    "playwright": "^1.48.2",
     "typescript": "5.0.4",
     "vitest": "^2.1.4"
   },
