--- a/packages/ckeditor5-find-and-replace/package.json
+++ b/packages/ckeditor5-find-and-replace/package.json
@@ -36,6 +36,7 @@
     "@ckeditor/ckeditor5-source-editing": "43.3.1",
     "@ckeditor/ckeditor5-theme-lark": "43.3.1",
     "@ckeditor/ckeditor5-undo": "43.3.1",
+    "@ckeditor/ckeditor5-widget": "43.3.1",
     "typescript": "5.0.4",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
