--- a/packages/ckeditor5-emoji/package.json
+++ b/packages/ckeditor5-emoji/package.json
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-clipboard": "43.3.1",
-    "@ckeditor/ckeditor5-dev-utils": "43.3.1",
+    "@ckeditor/ckeditor5-dev-utils": "^45.0.0",
     "@ckeditor/ckeditor5-editor-classic": "43.3.1",
     "@ckeditor/ckeditor5-engine": "43.3.1",
     "@ckeditor/ckeditor5-enter": "43.3.1",
