--- a/packages/ckeditor5-emoji/package.json
+++ b/packages/ckeditor5-emoji/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-core": "43.3.1",
     "@ckeditor/ckeditor5-mention": "43.3.1",
-    "@ckeditor/ckeditor5-typing": "43.3.1",
+    "@ckeditor/ckeditor5-ui": "43.3.1",
     "@ckeditor/ckeditor5-utils": "43.3.1",
     "ckeditor5": "43.3.1",
     "emoji-picker-element": "1.25.0",
@@ -30,6 +30,7 @@
     "@ckeditor/ckeditor5-essentials": "43.3.1",
     "@ckeditor/ckeditor5-paragraph": "43.3.1",
     "@ckeditor/ckeditor5-theme-lark": "43.3.1",
+    "@ckeditor/ckeditor5-typing": "43.3.1",
     "@ckeditor/ckeditor5-undo": "43.3.1",
     "typescript": "5.0.4",
     "webpack": "^5.94.0",
