--- a/packages/ckeditor5-bookmark/package.json
+++ b/packages/ckeditor5-bookmark/package.json
@@ -17,8 +17,7 @@
     "@ckeditor/ckeditor5-core": "44.0.0",
     "@ckeditor/ckeditor5-widget": "44.0.0",
     "@ckeditor/ckeditor5-utils": "44.0.0",
-    "@ckeditor/ckeditor5-ui": "44.0.0",
-    "@ckeditor/ckeditor5-link": "44.0.0"
+    "@ckeditor/ckeditor5-ui": "44.0.0"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-engine": "44.0.0",
@@ -39,6 +38,7 @@
     "@ckeditor/ckeditor5-paste-from-office": "44.0.0",
     "@ckeditor/ckeditor5-table": "44.0.0",
     "@ckeditor/ckeditor5-theme-lark": "44.0.0",
+    "@ckeditor/ckeditor5-link": "44.0.0",
     "typescript": "5.0.4",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
