Replace `icons` from `core` with new imports from new icons package

--- a/packages/ckeditor5-icons/tsconfig.dist.json
+++ b/packages/ckeditor5-icons/tsconfig.dist.json
@@ -1,7 +1,10 @@
 {
 	"extends": "../../tsconfig.dist.json",
 	"compilerOptions": {
-		"rootDir": "src"
+		"rootDir": "src",
+		"types": [
+			"../../typings/types"
+		]
 	},
 	"include": [
 		"src"
