--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,8 @@
     "moduleResolution": "node",
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "include": [
+    "./typings/"
+  ]
 }
