--- a/tsconfig.dll.json
+++ b/tsconfig.dll.json
@@ -2,5 +2,8 @@
  * The configuration is used when preparing DLL builds.
  */
 {
-  "extends": "./tsconfig.json"
+  "extends": "./tsconfig.json",
+  "include": [
+    "./typings/"
+  ]
 }
