--- a/tsconfig.docs.json
+++ b/tsconfig.docs.json
@@ -5,6 +5,7 @@
 {
   "extends": "./tsconfig.json",
   "include": [
+    "./typings/",
     "./packages/*/src/augmentation.ts",
     "./external/ckeditor5-commercial/packages/*/src/augmentation.ts"
   ]
