--- a/tsconfig.typedoc.json
+++ b/tsconfig.typedoc.json
@@ -26,7 +26,8 @@
   },
   "include": [
     "./packages/*/src/**/*.ts",
-    "./external/ckeditor5-commercial/packages/*/src/**/*.ts"
+    "./external/ckeditor5-commercial/packages/*/src/**/*.ts",
+    "./typings/"
   ],
   "exclude": [
     "node_modules"
