--- a/packages/ckeditor5-list/package.json
+++ b/packages/ckeditor5-list/package.json
@@ -46,6 +46,7 @@
     "@ckeditor/ckeditor5-page-break": "44.1.0",
     "@ckeditor/ckeditor5-paragraph": "44.1.0",
     "@ckeditor/ckeditor5-remove-format": "44.1.0",
+    "@ckeditor/ckeditor5-show-blocks": "44.1.0",
     "@ckeditor/ckeditor5-source-editing": "44.1.0",
     "@ckeditor/ckeditor5-table": "44.1.0",
     "@ckeditor/ckeditor5-theme-lark": "44.1.0",
