--- a/packages/ckeditor5-ui-components/package.json
+++ b/packages/ckeditor5-ui-components/package.json
@@ -14,14 +14,15 @@
   "main": "src/index.ts",
   "dependencies": {
     "@ckeditor/ckeditor5-core": "44.1.0",
+    "@lit/context": "^1.1.3",
     "lit": "^3.2.1"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-dev-utils": "^45.0.0",
+    "lodash-es": "^4.17.15",
     "typescript": "5.0.4",
     "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4",
-    "lodash-es": "^4.17.15"
+    "webpack-cli": "^5.1.4"
   },
   "author": "CKSource (http://cksource.com/)",
   "license": "SEE LICENSE IN LICENSE.md",
