Add `sideEffects` field to dependencies with non-tree-shakeable dependencies

--- a/packages/ckeditor5-markdown-gfm/package.json
+++ b/packages/ckeditor5-markdown-gfm/package.json
@@ -10,6 +10,10 @@
     "ckeditor5-plugin",
     "ckeditor5-dll"
   ],
+  "sideEffects": [
+    "*.css",
+    "build/**/*.js"
+  ],
   "type": "module",
   "main": "src/index.ts",
   "dependencies": {
