--- a/packages/ckeditor5-ui/package.json
+++ b/packages/ckeditor5-ui/package.json
@@ -9,6 +9,11 @@
     "ckeditor5-lib",
     "ckeditor5-dll"
   ],
+  "sideEffects": [
+    "*.css",
+    "build/**/*.js",
+    "dist/translations/*.umd.js"
+  ],
   "type": "module",
   "main": "src/index.ts",
   "dependencies": {
