Treat types as production dependencies

--- a/packages/ckeditor5-utils/package.json
+++ b/packages/ckeditor5-utils/package.json
@@ -12,15 +12,15 @@
   "type": "module",
   "main": "src/index.ts",
   "dependencies": {
-    "lodash-es": "4.17.21",
-    "@ckeditor/ckeditor5-ui": "44.1.0"
+    "@ckeditor/ckeditor5-ui": "44.1.0",
+    "@types/lodash-es": "4.17.12",
+    "lodash-es": "4.17.21"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-build-classic": "44.1.0",
     "@ckeditor/ckeditor5-editor-classic": "44.1.0",
     "@ckeditor/ckeditor5-core": "44.1.0",
     "@ckeditor/ckeditor5-engine": "44.1.0",
-    "@types/lodash-es": "^4.17.12",
     "typescript": "5.0.4"
   },
   "depcheckIgnore": [
