--- a/packages/ckeditor5-markdown-gfm/package.json
+++ b/packages/ckeditor5-markdown-gfm/package.json
@@ -16,6 +16,7 @@
     "@ckeditor/ckeditor5-clipboard": "44.1.0",
     "@ckeditor/ckeditor5-core": "44.1.0",
     "@ckeditor/ckeditor5-engine": "44.1.0",
+    "@types/turndown": "5.0.5",
     "ckeditor5": "44.1.0",
     "marked": "4.0.12",
     "turndown": "7.2.0",
@@ -26,7 +27,7 @@
     "@ckeditor/ckeditor5-basic-styles": "44.1.0",
     "@ckeditor/ckeditor5-block-quote": "44.1.0",
     "@ckeditor/ckeditor5-code-block": "44.1.0",
-    "@ckeditor/ckeditor5-dev-utils": "^45.0.0",
+    "@ckeditor/ckeditor5-dev-utils": "^46.0.0",
     "@ckeditor/ckeditor5-editor-classic": "44.1.0",
     "@ckeditor/ckeditor5-essentials": "44.1.0",
     "@ckeditor/ckeditor5-font": "44.1.0",
@@ -42,8 +43,6 @@
     "@ckeditor/ckeditor5-theme-lark": "44.1.0",
     "@ckeditor/ckeditor5-undo": "44.1.0",
     "@ckeditor/ckeditor5-utils": "44.1.0",
-    "@types/marked": "^4.0.8",
-    "@types/turndown": "^5.0.4",
     "typescript": "5.0.4",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
