Remove `tests` folder for `sideEffects`

--- a/packages/ckeditor5-markdown-gfm/package.json
+++ b/packages/ckeditor5-markdown-gfm/package.json
@@ -12,8 +12,7 @@
   ],
   "sideEffects": [
     "*.css",
-    "build/**/*.js",
-    "tests/**/*.js"
+    "build/**/*.js"
   ],
   "type": "module",
   "main": "src/index.ts",
