--- a/packages/ckeditor5-ui/package.json
+++ b/packages/ckeditor5-ui/package.json
@@ -12,8 +12,7 @@
   "sideEffects": [
     "*.css",
     "build/**/*.js",
-    "dist/translations/*.umd.js",
-    "tests/**/*.js"
+    "dist/translations/*.umd.js"
   ],
   "type": "module",
   "main": "src/index.ts",
