Revert invalid changes.

--- a/tsconfig.release.json
+++ b/tsconfig.release.json
@@ -5,7 +5,6 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "sourceMap": false,
-    "declaration": true,
-    "moduleResolution": "bundler"
+    "declaration": true
   }
 }
