--- a/packages/ckeditor5-full-screen/package.json
+++ b/packages/ckeditor5-full-screen/package.json
@@ -13,26 +13,42 @@
   "type": "module",
   "main": "src/index.ts",
   "dependencies": {
-    "@ckeditor/ckeditor5-core": "44.1.0",
-    "@ckeditor/ckeditor5-engine": "44.1.0",
-    "@ckeditor/ckeditor5-ui": "44.1.0",
-    "@ckeditor/ckeditor5-utils": "44.1.0",
+    "@ckeditor/ckeditor5-editor-classic": "44.1.0",
+    "@ckeditor/ckeditor5-editor-decoupled": "44.1.0",
     "ckeditor5": "44.1.0"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-alignment": "44.1.0",
     "@ckeditor/ckeditor5-basic-styles": "44.1.0",
+    "@ckeditor/ckeditor5-block-quote": "44.1.0",
+    "@ckeditor/ckeditor5-bookmark": "44.1.0",
     "@ckeditor/ckeditor5-cloud-services": "44.1.0",
     "@ckeditor/ckeditor5-code-block": "44.1.0",
-    "@ckeditor/ckeditor5-dev-utils": "^45.0.0",
+    "@ckeditor/ckeditor5-core": "44.1.0",
+    "@ckeditor/ckeditor5-dev-utils": "^46.0.0",
     "@ckeditor/ckeditor5-easy-image": "44.1.0",
-    "@ckeditor/ckeditor5-editor-decoupled": "44.1.0",
+    "@ckeditor/ckeditor5-find-and-replace": "44.1.0",
     "@ckeditor/ckeditor5-font": "44.1.0",
+    "@ckeditor/ckeditor5-highlight": "44.1.0",
+    "@ckeditor/ckeditor5-horizontal-line": "44.1.0",
+    "@ckeditor/ckeditor5-html-embed": "44.1.0",
+    "@ckeditor/ckeditor5-html-support": "44.1.0",
     "@ckeditor/ckeditor5-image": "44.1.0",
     "@ckeditor/ckeditor5-indent": "44.1.0",
+    "@ckeditor/ckeditor5-language": "44.1.0",
+    "@ckeditor/ckeditor5-link": "44.1.0",
+    "@ckeditor/ckeditor5-list": "44.1.0",
+    "@ckeditor/ckeditor5-mention": "44.1.0",
     "@ckeditor/ckeditor5-page-break": "44.1.0",
+    "@ckeditor/ckeditor5-paste-from-office": "44.1.0",
+    "@ckeditor/ckeditor5-remove-format": "44.1.0",
+    "@ckeditor/ckeditor5-show-blocks": "44.1.0",
+    "@ckeditor/ckeditor5-source-editing": "44.1.0",
+    "@ckeditor/ckeditor5-special-characters": "44.1.0",
+    "@ckeditor/ckeditor5-style": "44.1.0",
     "@ckeditor/ckeditor5-table": "44.1.0",
     "@ckeditor/ckeditor5-theme-lark": "44.1.0",
+    "@ckeditor/ckeditor5-typing": "44.1.0",
     "typescript": "5.0.4",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
