Add translations to `sideEffects` for consistency with other packages

--- a/packages/ckeditor5-markdown-gfm/package.json
+++ b/packages/ckeditor5-markdown-gfm/package.json
@@ -12,7 +12,8 @@
   ],
   "sideEffects": [
     "*.css",
-    "build/**/*.js"
+    "build/**/*.js",
+    "dist/translations/*.umd.js"
   ],
   "type": "module",
   "main": "src/index.ts",
