--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "@ckeditor/ckeditor5-slash-command": "44.1.0",
     "@ckeditor/ckeditor5-template": "44.1.0",
     "@ckeditor/ckeditor5-track-changes": "44.1.0",
+    "@ckeditor/ckeditor5-uploadcare": "0.0.1",
     "@inquirer/prompts": "^6.0.0",
     "@listr2/prompt-adapter-inquirer": "^2.0.16",
     "@ocular-d/vale-bin": "^2.29.1",
