--- a/packages/ckeditor5-fullscreen/package.json
+++ b/packages/ckeditor5-fullscreen/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ckeditor/ckeditor5-full-screen",
+  "name": "@ckeditor/ckeditor5-fullscreen",
   "version": "0.0.1",
-  "description": "Full screen feature for CKEditor 5.",
+  "description": "Fullscreen mode feature for CKEditor 5.",
   "keywords": [
     "ckeditor",
     "ckeditor5",
@@ -60,7 +60,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/ckeditor/ckeditor5.git",
-    "directory": "packages/ckeditor5-full-screen"
+    "directory": "packages/ckeditor5-fullscreen"
   },
   "files": [
     "dist",
