--- a/packages/ckeditor5-email/package.json
+++ b/packages/ckeditor5-email/package.json
@@ -25,12 +25,14 @@
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "@ckeditor/ckeditor5-basic-styles": "44.1.0",
+    "@ckeditor/ckeditor5-dev-utils": "^46.0.0",
     "@ckeditor/ckeditor5-editor-classic": "44.1.0",
     "@ckeditor/ckeditor5-essentials": "44.1.0",
     "@ckeditor/ckeditor5-heading": "44.1.0",
     "@ckeditor/ckeditor5-highlight": "44.1.0",
     "@ckeditor/ckeditor5-image": "44.1.0",
     "@ckeditor/ckeditor5-paragraph": "44.1.0",
+    "@ckeditor/ckeditor5-theme-lark": "44.1.0",
     "@ckeditor/ckeditor5-source-editing": "44.1.0"
   },
   "author": "CKSource (http://cksource.com/)",
