--- a/packages/ckeditor5-indent/tsconfig.json
+++ b/packages/ckeditor5-indent/tsconfig.json
@@ -8,6 +8,7 @@
 		"tests"
 	],
 	"compilerOptions": {
-		"composite": true
+		"composite": true,
+		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.tsbuildinfo"
 	}
 }
