Improved the naming of the ckeditor5-icons package.

--- a/packages/ckeditor5-icons/package.json
+++ b/packages/ckeditor5-icons/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ckeditor/ckeditor5-icons",
   "version": "0.0.1",
-  "description": "Icons for CKEditor 5.",
+  "description": "Icon pack for CKEditor 5.",
   "keywords": [
     "ckeditor",
     "ckeditor5",
