Add `email` and `export-inline-styles` packages to main `package.json`.

--- a/package.json
+++ b/package.json
@@ -99,8 +99,10 @@
     "@ckeditor/ckeditor5-dev-utils": "^47.0.0",
     "@ckeditor/ckeditor5-dev-web-crawler": "^47.0.0",
     "@ckeditor/ckeditor5-document-outline": "44.3.0",
+    "@ckeditor/ckeditor5-email": "0.0.1",
     "@ckeditor/ckeditor5-export-pdf": "44.3.0",
     "@ckeditor/ckeditor5-export-word": "44.3.0",
+    "@ckeditor/ckeditor5-export-inline-styles": "0.0.1",
     "@ckeditor/ckeditor5-format-painter": "44.3.0",
     "@ckeditor/ckeditor5-import-word": "44.3.0",
     "@ckeditor/ckeditor5-inspector": "^4.0.0",
