--- a/packages/ckeditor5-fullscreen/package.json
+++ b/packages/ckeditor5-fullscreen/package.json
@@ -13,8 +13,17 @@
   "type": "module",
   "main": "src/index.ts",
   "dependencies": {
+    "@ckeditor/ckeditor5-comments": "44.3.0",
+    "@ckeditor/ckeditor5-core": "44.3.0",
+    "@ckeditor/ckeditor5-document-outline": "44.3.0",
     "@ckeditor/ckeditor5-editor-classic": "44.3.0",
     "@ckeditor/ckeditor5-editor-decoupled": "44.3.0",
+    "@ckeditor/ckeditor5-icons": "0.0.1",
+    "@ckeditor/ckeditor5-pagination": "44.3.0",
+    "@ckeditor/ckeditor5-real-time-collaboration": "44.3.0",
+    "@ckeditor/ckeditor5-revision-history": "44.3.0",
+    "@ckeditor/ckeditor5-ui": "44.3.0",
+    "@ckeditor/ckeditor5-utils": "44.3.0",
     "ckeditor5": "44.3.0"
   },
   "devDependencies": {
@@ -24,11 +33,12 @@
     "@ckeditor/ckeditor5-bookmark": "44.3.0",
     "@ckeditor/ckeditor5-cloud-services": "44.3.0",
     "@ckeditor/ckeditor5-code-block": "44.3.0",
-    "@ckeditor/ckeditor5-core": "44.3.0",
     "@ckeditor/ckeditor5-dev-utils": "^46.0.0",
-    "@ckeditor/ckeditor5-document-outline": "44.3.0",
-    "@ckeditor/ckeditor5-real-time-collaboration": "44.3.0",
+    "@ckeditor/ckeditor5-editor-balloon": "44.3.0",
+    "@ckeditor/ckeditor5-editor-inline": "44.3.0",
+    "@ckeditor/ckeditor5-editor-multi-root": "44.3.0",
     "@ckeditor/ckeditor5-easy-image": "44.3.0",
+    "@ckeditor/ckeditor5-essentials": "44.3.0",
     "@ckeditor/ckeditor5-find-and-replace": "44.3.0",
     "@ckeditor/ckeditor5-font": "44.3.0",
     "@ckeditor/ckeditor5-highlight": "44.3.0",
@@ -42,6 +52,7 @@
     "@ckeditor/ckeditor5-list": "44.3.0",
     "@ckeditor/ckeditor5-mention": "44.3.0",
     "@ckeditor/ckeditor5-page-break": "44.3.0",
+    "@ckeditor/ckeditor5-paragraph": "44.3.0",
     "@ckeditor/ckeditor5-paste-from-office": "44.3.0",
     "@ckeditor/ckeditor5-remove-format": "44.3.0",
     "@ckeditor/ckeditor5-show-blocks": "44.3.0",
